<?xml version="1.0"?>
 <package>
  <name>exo_simulations</name>
  <version>0.0.0</version>
  <description>The exo_simulations package</description>

  <maintainer email="yifengl@todo.todo">yifengl</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
 </package>
